basctl/source/basicide/moduldl2.cxx
@@ -1320,6 +1320,22 @@ void createLibImpl(weld::Window* pWin, const ScriptDocument& rDocument,
             if ( !rDocument.createModule( aLibName, aModName, true, sModuleCode ) )
                 throw Exception("could not create module " + aModName, nullptr);
 
+            // tdf#151741 - store all libraries to the file system, otherwise they
+            // cannot be renamed/moved since the SfxLibraryContainer::renameLibrary
+            // moves the foldes/files on the file system
+            Reference<script::XLibraryContainer2> xModLibContainer(
+                rDocument.getLibraryContainer(E_SCRIPTS), UNO_QUERY);
+            Reference<script::XLibraryContainer2> xDlgLibContainer(
+                rDocument.getLibraryContainer(E_DIALOGS), UNO_QUERY);
+            Reference<script::XPersistentLibraryContainer> xModPersLibContainer(xModLibContainer,
+                                                                                UNO_QUERY);
+            if (xModPersLibContainer.is())
+                xModPersLibContainer->storeLibraries();
+            Reference<script::XPersistentLibraryContainer> xDlgPersLibContainer(xDlgLibContainer,
+                                                                                UNO_QUERY);
+            if (xDlgPersLibContainer.is())
+                xDlgPersLibContainer->storeLibraries();
+
             SbxItem aSbxItem( SID_BASICIDE_ARG_SBX, rDocument, aLibName, aModName, TYPE_MODULE );
             if (SfxDispatcher* pDispatcher = GetDispatcher())
                 pDispatcher->ExecuteList(SID_BASICIDE_SBXINSERTED,
